# nhs-patient-assistant

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
data/: grafana.json  ground-truth-retrieval.csv  nhs-symptom.json  rag-eval-gpt-4o.csv  rag-eval-gpt-5.4-mini.csv
notebooks/: nhs_chunking.ipynb  nhs_ground_truth_generation.ipynb  nhs_llm_eval.ipynb  nhs_search_pgdb.ipynb
src/: app.py  db.py  db_prep.py  ingest.py  nhs_chunking_data.py  nhs_download.py  rag.py  streamlit_app.py
