[project]
name = "nhs-patient-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "flask>=3.1.3",
    "jupyter>=1.1.1",
    "minsearch>=0.2.0",
    "openai>=2.44.0",
    "openai-agents>=0.18.0",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pydantic-ai>=2.7.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "sqlitesearch>=0.3.0",
    "streamlit>=1.59.1",
    "tqdm>=4.68.4",
]
